# app/Models/User.php
@@ -18,8 +18,7 @@ use Spatie\Permission\Traits\HasRoles;
 /**
  * @mixin Builder
  */
-class User extends Authenticatable
-{
+class User extends Authenticatable {
     use SoftDeletes;
     use HasApiTokens;
     use HasFactory;
@@ -35,12 +34,17 @@ class User extends Authenticatable
      */
     protected $fillable = [
         'name',
+        'first_name',
+        'last_name',
+        'username',
         'email',
         'mobile',
         'mobile_verified_code',
         'mobile_verified_code_expire_time',
+        'profile_photo_path',
 //        'password',
-//        'password',
+        'disable_by',
+        'disable_at',
     ];
 
     /**
@@ -72,15 +76,29 @@ class User extends Authenticatable
     protected $appends = [
         'profile_photo_url',
     ];
+    /***************************/
+    // id one to many disable_by
+    public function disabling()
+    {
+        return $this->hasMany(User::class, 'disable_by', 'id');
+    }
+
+    public function disabledBy()
+    {
+        return $this->belongsTo(User::class, 'disable_by', 'id');
+    }
+
+
+    /****************************/
 
     public function roleShopUser()
     {
-        return $this->hasMany(RolesShopsUsers::class);
+        return $this->hasMany( RolesShopsUsers::class );
     }
 
     public function shop()
     {
-        return $this->belongsToMany(Shop::class, 'roles_shops_users');
+        return $this->belongsToMany( Shop::class, 'roles_shops_users' );
     }
     /****************************************************************/
 
@@ -88,27 +106,27 @@ class User extends Authenticatable
 
     public function shopkeeperNormalProduct()
     {
-        return $this->hasMany(NormalProduct::class, 'product_registry_shopkeeper_id', 'id');
+        return $this->hasMany( NormalProduct::class, 'product_registry_shopkeeper_id', 'id' );
     }
 
     public function shopkeeperCustomProduct()
     {
-        return $this->hasMany(CustomProduct::class, 'custom_product_registry_shopkeeper_id', 'id');
+        return $this->hasMany( CustomProduct::class, 'custom_product_registry_shopkeeper_id', 'id' );
     }
 
     public function shopkeeperNormalService()
     {
-        return $this->hasMany(NormalService::class, 'normal_service_registry_shopkeeper_id', 'id');
+        return $this->hasMany( NormalService::class, 'normal_service_registry_shopkeeper_id', 'id' );
     }
 
     public function shopkeeperCustomService()
     {
-        return $this->hasMany(CustomService::class, 'custom_services_registry_shopkeeper_id', 'id');
+        return $this->hasMany( CustomService::class, 'custom_services_registry_shopkeeper_id', 'id' );
     }
 
     public function shopkeeperTask()
     {
-        return $this->hasMany(Task::class, 'task_registry_shopkeeper_id', 'id');
+        return $this->hasMany( Task::class, 'task_registry_shopkeeper_id', 'id' );
     }
 
     /****************************************************************/
@@ -117,46 +135,47 @@ class User extends Authenticatable
 
     public function confirmUserNormalProduct()
     {
-        return $this->hasMany(NormalProduct::class, 'product_status_confirm_user_id', 'id');
+        return $this->hasMany( NormalProduct::class, 'product_status_confirm_user_id', 'id' );
     }
 
     public function confirmUserCustomProduct()
     {
-        return $this->hasMany(CustomProduct::class, 'custom_product_status_confirm_user_id', 'id');
+        return $this->hasMany( CustomProduct::class, 'custom_product_status_confirm_user_id', 'id' );
     }
 
     public function confirmUserNormalService() /// todo add to table
     {
-        return $this->hasMany(NormalService::class, 'normal_service_registry_shopkeeper_id', 'id');
+        return $this->hasMany( NormalService::class, 'normal_service_registry_shopkeeper_id', 'id' );
     }
 
     public function confirmUserCustomService()
     {
-        return $this->hasMany(CustomService::class, 'custom_services_status_confirm_user_id', 'id');
+        return $this->hasMany( CustomService::class, 'custom_services_status_confirm_user_id', 'id' );
     }
 
     public function confirmUserTask()
     {
-        return $this->hasMany(Task::class, 'task_status_confirm_user_id', 'id');
+        return $this->hasMany( Task::class, 'task_status_confirm_user_id', 'id' );
     }
 
     /*************************/
     // product category adder
     public function productCategoryAdditionalUser()
     {
-        return $this->hasMany(ProductCategory::class, 'product_category_additional_user_id', 'id');
+        return $this->hasMany( ProductCategory::class, 'product_category_additional_user_id', 'id' );
     }
 
     // product tag adder
     public function productTagAdditionalUser()
     {
-        return $this->hasMany(ProductTag::class, 'product_tag_additional_user_id', 'id');
+        return $this->hasMany( ProductTag::class, 'product_tag_additional_user_id', 'id' );
     }
+
     /**************************/
 
     public function shop2()
     {
-        return $this->ha(RolesShopsUsers::class, '');
+        return $this->ha( RolesShopsUsers::class, '' );
     }
 //    /**
 //     * @param $mobile
@@ -176,19 +195,6 @@ class User extends Authenticatable
 //    }
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
     /****************************************************************/
     /// implements PhoneVerificationCodeGrantUserInterface
     /**
@@ -197,10 +203,10 @@ class User extends Authenticatable
      * @param $phoneNumber
      * @return Model|null
      */
-    public function findOrCreateForPassportVerifyCodeGrant( $phoneNumber )
+    public function findOrCreateForPassportVerifyCodeGrant($phoneNumber)
     {
         // If you need to automatically register the user.
-        return static::firstOrCreate( [ 'mobile' => $phoneNumber ] );
+        return static::firstOrCreate( ['mobile' => $phoneNumber] );
 
         // If the phone number is not exists in users table, will be fail to authenticate.
         // return static::where('mobile', '=', $phoneNumber)->first();
@@ -212,7 +218,7 @@ class User extends Authenticatable
      * @param $verificationCode
      * @return boolean
      */
-    public function validateForPassportVerifyCodeGrant( $verificationCode )
+    public function validateForPassportVerifyCodeGrant($verificationCode)
     {
         // Check verification code is valid.
         // return \App\Code::where('mobile', $this->mobile)->where('code', '=', $verificationCode)->where('expired_at', '>', now()->toDatetimeString())->exists();
